--- a/PyQt/pyqt_ui/bed_mainwindow.ui
+++ b/PyQt/pyqt_ui/bed_mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1183</width>
-    <height>1025</height>
+    <width>1385</width>
+    <height>1154</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,31 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="6" colspan="2">
+    <item row="0" column="0" colspan="8">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>1114</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="8">
+     <widget class="QPushButton" name="toggleBtn">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 0, 0);
+border-radius: 15px;</string>
+      </property>
+      <property name="text">
+       <string>Disconnected to device</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="8">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -31,7 +55,7 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <spacer name="horizontalSpacer_12">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -47,7 +71,7 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="1" colspan="8">
+    <item row="2" column="1" colspan="6">
      <widget class="QLabel" name="label">
       <property name="maximumSize">
        <size>
@@ -66,7 +90,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="9">
+    <item row="2" column="7" colspan="2">
      <spacer name="horizontalSpacer_13">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -82,7 +106,7 @@
       </property>
      </spacer>
     </item>
-    <item row="2" column="2">
+    <item row="3" column="2">
      <spacer name="verticalSpacer_7">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -98,7 +122,7 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="0" colspan="2">
+    <item row="4" column="0" colspan="2">
      <spacer name="horizontalSpacer_16">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -111,7 +135,7 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="2" colspan="4">
+    <item row="4" column="2" colspan="2">
      <widget class="QPushButton" name="ReadSD">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -126,7 +150,7 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="3" column="8" colspan="2">
+    <item row="4" column="7" colspan="2">
      <spacer name="horizontalSpacer_15">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -139,7 +163,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="4" column="0" colspan="2">
+    <item row="5" column="0" colspan="2">
      <spacer name="horizontalSpacer_11">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -152,7 +176,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="4" column="2" colspan="2">
+    <item row="5" column="2">
      <spacer name="verticalSpacer_5">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -168,7 +192,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="4" column="8" colspan="2">
+    <item row="5" column="7" colspan="2">
      <spacer name="horizontalSpacer_10">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -181,7 +205,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="5" column="2" rowspan="2" colspan="6">
+    <item row="6" column="2" colspan="2">
      <widget class="QPushButton" name="ConfigButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -196,7 +220,7 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="6" column="4" rowspan="2" colspan="2">
+    <item row="6" column="4" rowspan="2">
      <spacer name="verticalSpacer_4">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -225,7 +249,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="7" column="8" rowspan="2" colspan="2">
+    <item row="7" column="7" rowspan="2" colspan="2">
      <spacer name="horizontalSpacer_7">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -238,7 +262,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="8" column="2" colspan="6">
+    <item row="8" column="2" colspan="3">
      <widget class="QPushButton" name="CreateRecordsButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -253,7 +277,7 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="9" column="4" colspan="2">
+    <item row="9" column="4">
      <spacer name="verticalSpacer_6">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -269,7 +293,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="9" column="7" colspan="3">
+    <item row="9" column="6" colspan="3">
      <spacer name="horizontalSpacer_8">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -282,7 +306,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="10" column="2" colspan="4">
+    <item row="10" column="2" colspan="2">
      <widget class="QPushButton" name="RecordsButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -310,7 +334,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="11" column="5" colspan="2">
+    <item row="11" column="5">
      <spacer name="verticalSpacer_8">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -339,7 +363,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="12" column="2" colspan="4">
+    <item row="12" column="2" colspan="2">
      <widget class="QPushButton" name="DataViewButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -354,7 +378,7 @@ border-radius: 15px;
       </property>
      </widget>
     </item>
-    <item row="12" column="8" colspan="2">
+    <item row="12" column="7" colspan="2">
      <spacer name="horizontalSpacer_14">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -387,8 +411,8 @@ border-radius: 15px;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1183</width>
-     <height>26</height>
+     <width>1385</width>
+     <height>23</height>
     </rect>
    </property>
   </widget>
